# summa

./: CMakeLists.txt  COPYING
src/: comm_summa.c  comm_summa.h  comm_summa.proto  driverinstance.cpp  driverinstance.h  drivermanager.cpp  drivermanager.h  driverprovider.cpp  driverprovider.h  drv_summa.c  drv_summa.h  main.cpp  res.qrc  ret_code.h  summa.c  summa_child.c  summa_child.h  summacontrolpanel.cpp  summacontrolpanel.h  summacontrolpanel.ui  summadeviceconfig.cpp  summadeviceconfig.h  summadeviceconfig.ui  summadeviceconfig.ui2  test.cpp  test.h  test.ui
